--- a/meituan/css/xuanze.css
+++ b/meituan/css/xuanze.css
@@ -1,5 +1,6 @@
 .xz-body{
     margin: 0;
+    background: rgb(240,239,237);
 }
 .navbar{
     display: flex;
@@ -8,34 +9,32 @@
     text-align: center;
     align-items:center;
     justify-content: space-around;
-    height: 3.8rem;
-
-
+    height: 3.2rem;
 }
 .nav-wrap-left{
 }
 .nav-wrap-left img{
-    width: 2rem;
+    width: 1.6rem;
     height: auto;
 }
 .nav-header{
     width: 66%;
     color: white;
-    font-size: 1.2rem;
+    font-size: 1.1rem;
 }
 .nav-wrap-right{
     color: white;
+    font-size: 0.8rem;
 
 }
 .nav-wrap-right img{
-    width: 1.7rem;
+    width: 1.4rem;
     height: auto;
 }
 
 .wrapper{
     display: flex;
     flex-direction: column;
-    background: rgb(240,239,237);;
 }
 .box-top{
     border: 1px solid rgb(220,219,217);
@@ -88,4 +87,41 @@
     text-decoration: none;
     color: black;
     font-size: 0.9rem;
+}
+
+.footer-bar{
+    display: flex;
+    flex-direction: row;
+    align-items:center;
+    text-align: center;
+    margin-top: 1rem;
+    font-size: 0.9rem;
+
+}
+.footer-bar a{
+    text-decoration: none;
+    border: 1px solid rgb(6,193,176);
+    width: 4rem;
+    height: 1.6rem;
+    margin-left: 1rem;
+    line-height: 1.6rem;
+    color: rgb(6,193,176);
+    border-radius: 3px;
+
+}
+.bar-div{
+    margin-left: 17%;
+}
+.bar-div a{
+    display: inline-block;
+    width: 5.5rem;
+    height: 1.6rem;
+    margin-left: 0.3rem;
+}
+.fnav-ul{
+    list-style-type: none;
+    display: flex;
+    flex-direction: row;
+    text-align: center;
+    align-items:center;
 }
