--- a/meituan/css/xuanze.css
+++ b/meituan/css/xuanze.css
@@ -53,6 +53,8 @@
     width: 100%;
     text-decoration: none;
     color: black;
+    height: 100%;
+    line-height: 2.1rem;
 }
 .wrapper h4{
     width: 4rem;
@@ -84,6 +86,8 @@
 .box-li a{
     display: block;
     width: 100%;
+    height: 100%;
+    line-height: 2.3rem;
     text-decoration: none;
     color: black;
     font-size: 0.9rem;
@@ -117,6 +121,7 @@
     width: 5.5rem;
     height: 1.6rem;
     margin-left: 0.3rem;
+    text-decoration: none;
 }
 .fnav-ul{
     list-style-type: none;
@@ -124,4 +129,67 @@
     flex-direction: row;
     text-align: center;
     align-items:center;
+    padding-inline-start: 0;
+    justify-content: space-around;
+    font-size: 0.85rem;
+}
+.fnav-li{
+    border-right: 1px solid black;
+}
+.fnav-li a{
+    margin-right: 1.4rem;
+    text-decoration: none;
+    color: rgb(6,193,176);
+}
+.fnav-li-a{
+    text-decoration: none;
+    color: rgb(6,193,176);
+}
+.footer-link{
+    font-size: 0.85rem;
+    display: flex;
+    text-align: center;
+    align-items:center;
+    flex-wrap: wrap;
+}
+.footer-link span{
+    margin-left: 2rem;
+    margin-top: 0.3rem;
+}
+.footer-link a{
+    text-decoration: none;
+    color: rgb(6,193,176);
+    margin-top: 0.3rem;
+}
+.footer-link-a{
+    text-decoration: none;
+    color: rgb(6,193,176);
+    padding-left: 2rem;
+    margin-top: 0.3rem;
+}
+.footer-foot{
+    position:relative;
+    height:1.875rem;
+    line-height: 1.875rem;
+    margin:2.47rem auto;
+    text-align: center;
+}
+.footer-foot i{
+    display:block;
+    height:1px;
+    background:rgb(200,200,200);
+    position:absolute;
+    top:0.9rem;
+    width:100%;
+}
+.footer-foot p {
+    display: inline-block;
+    font-size: 0.75rem;
+    color: rgb(150,150,150);
+    background: rgba(240, 240, 240, 1);
+    padding: 0 1.875rem;
+    text-align: center;
+    margin: 0 auto;
+    position: relative;
+    z-index: 2;
 }
