--- a/css/zhoubian/zhoubian.css
+++ b/css/zhoubian/zhoubian.css
@@ -18,6 +18,7 @@ body{
 .z-head-contain{
     display: flex;
     width: 100%;
+    min-width:20rem;
     height: 3.5rem;
     background-color:rgb(6,193,174);
     justify-content: space-between;
@@ -113,6 +114,7 @@ body{
     position: absolute;
     display: flex;
     width: 100%;
+    min-width:20rem;
     z-index: 98;
     height: 3.5rem;
     top:0;
